corrected email address

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<div id="footer">
-		<p>Designed and Built by <a href="mailto:peterapplebe@gmail.com">Peter Applebee</a> 2014</p>
+		<p>Designed and Built by <a href="mailto:peterapplebee@gmail.com">Peter Applebee</a> 2014</p>
 	</div>
 
 </body>
