--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html lang="en">
 <head>
-	<title></title>
+	<title>Papplebee's FizzBuzz App</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="js/jquery-1.11.1.min.js"></script>
