Coded New Features

--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
 			</form>			
 		</div>
 
-		<div id="results-div">
+		
+			
+		<div id="controls">
+			<button id="start">Start</button>
+			<button id="reset">Reset</button>
+		</div>
+	</div>
+
+	<div id="program-output">
+
+	</div>
+
+	<div id="results-div">
 	<!--	<h4>Results Counter</h4>	-->
 			<table id="results-counter">
-				
-					<tr>
+				 	<tr>
 						<th class="fizz">Fizz</th>
 						<td id="fizz-data">0</td>
 						<th class="buzz">Buzz</th>
@@ -48,18 +59,7 @@
 						<th class="fizz-buzz">FizzBuzz</th>
 						<td id="fizzbuzz-data">0</td>
 					</tr>
-
 			</table>
-		</div>
-			
-		<div id="controls">
-			<button id="start">Start</button>
-			<a id="reset" href="index.html">Reset</a>
-		</div>
-	</div>
-
-	<div id="program-output">
-
 	</div>
 
 	<div id="footer">
