--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<h2>Instructions</h2>
 			<p class="width-50-percent">Enter Start and Finish number</p>
 			<form id="user-input-form">
-				<label id="start-label">Start</label><input id="start-number" type="number" value="1">
-				<input id="finish-number" type="number" value="100"><label id="finish-label">Finish</label>
+				<label id="start-label">Start</label><input id="start-number" value="1">
+				<input id="finish-number" value="30"><label id="finish-label">Finish</label>
 			</form>			
 		</div>
 
